--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     </noscript>
     <!-- start codes -->
 
-
     <!-- start navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
@@ -45,12 +44,7 @@
                             <span class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a 
-                        class="nav-link" 
-                        href="#"
-                        data-bs-toggle="modal"
-                        data-bs-target="#registerId"
-                        >Register</a>
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#registerId">Register</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
@@ -73,32 +67,15 @@
     <!-- end navbar -->
 
     <!-- Register Start -->
-<div
-        class="modal fade"
-        id="registerId"
-        tabindex="-1"
-        data-bs-backdrop="static"
-        data-bs-keyboard="false"
-        
-        role="dialog"
-        aria-labelledby="modalTitleId"
-        aria-hidden="true"
-    >
-        <div
-            class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg"
-            role="document"
-        >
+    <div class="modal fade" id="registerId" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false"
+        role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="modalTitleId">
-                       Register
+                        Register
                     </h5>
-                    <button
-                        type="button"
-                        class="btn-close"
-                        data-bs-dismiss="modal"
-                        aria-label="Close"
-                    ></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <h6>Register Form</h6>
@@ -106,72 +83,48 @@
 
                         <!-- ADINIZ -->
                         <div class="form-group mb-2 mt-2">
-                            <label for="uname" class="mt-3" style="font-weight: bolder; color:blue; text-transform: uppercase; ">Adınız:</label>
-                            <input 
-                            type="text" 
-                            class="form-control mt-2 mb-2"
-                            id="uname"
-                            name="uname"
-                            placeholder="Adınız Giriniz." 
-                            title="Adınız" 
-                            required autofocus="on">
+                            <label for="uname" class="mt-3"
+                                style="font-weight: bolder; color:blue; text-transform: uppercase; ">Adınız:</label>
+                            <input type="text" class="form-control mt-2 mb-2" id="uname" name="uname"
+                                placeholder="Adınız Giriniz." title="Adınız" required autofocus="on">
                         </div>
 
-                         <!-- SOYADINIZ -->
-                         <div class="form-group mb-2 mt-2">
-                            <label for="usurname"  class="mt-3" style="font-weight: bolder; color:blue; text-transform: uppercase;">SOYADINIZ:</label>
-                            <input 
-                            type="text" 
-                            class="form-control mt-2 mb-2"
-                            id="usurname"
-                            name="usurname"
-                            placeholder="Soyadınız Giriniz." 
-                            title="Soyadınız" 
-                            required>
+                        <!-- SOYADINIZ -->
+                        <div class="form-group mb-2 mt-2">
+                            <label for="usurname" class="mt-3"
+                                style="font-weight: bolder; color:blue; text-transform: uppercase;">SOYADINIZ:</label>
+                            <input type="text" class="form-control mt-2 mb-2" id="usurname" name="usurname"
+                                placeholder="Soyadınız Giriniz." title="Soyadınız" required>
                         </div>
 
 
-                         <!-- EMAİL -->
-                         <div class="form-group mb-2 mt-2">
-                            <label for="uemail"  class="mt-3" style="font-weight: bolder; color:blue; text-transform: uppercase;">EMAİL:</label>
-                            <input 
-                            type="email" 
-                            class="form-control mt-2 mb-2"
-                            id="uemail"
-                            name="uemail"
-                            placeholder="Email Giriniz." 
-                            title="Email" 
-                            required>
+                        <!-- EMAİL -->
+                        <div class="form-group mb-2 mt-2">
+                            <label for="uemail" class="mt-3"
+                                style="font-weight: bolder; color:blue; text-transform: uppercase;">EMAİL:</label>
+                            <input type="email" class="form-control mt-2 mb-2" id="uemail" name="uemail"
+                                placeholder="Email Giriniz." title="Email" required>
                         </div>
 
 
-                         <!-- ŞİFRE -->
-                         <div class="form-group mb-2 mt-2">
-                            <label for="upassword"  class="mt-3" style="font-weight: bolder; color:blue; text-transform: uppercase;">ŞİFRE:</label>
-                            <input 
-                            type="password" 
-                            class="form-control mt-2 mb-2"
-                            id="upassword"
-                            name="upassword"
-                            placeholder="Şifrenizi Giriniz." 
-                            title="Şifreniz" 
-                            required>
+                        <!-- ŞİFRE -->
+                        <div class="form-group mb-2 mt-2">
+                            <label for="upassword" class="mt-3"
+                                style="font-weight: bolder; color:blue; text-transform: uppercase;">ŞİFRE:</label>
+                            <input type="password" class="form-control mt-2 mb-2" id="upassword" name="upassword"
+                                placeholder="Şifrenizi Giriniz." title="Şifreniz" required>
                         </div>
 
 
-                         <!-- SUBMIT -->
-                         <div class="form-group mb-2 mt-4">
-                          <input type="reset" class="btn btn-danger" value="Temizle">
-                          <button type="submit" class="btn btn-primary"> Gönder </button>
+                        <!-- SUBMIT -->
+                        <div class="form-group mb-2 mt-4">
+                            <input type="reset" class="btn btn-danger" value="Temizle">
+                            <button type="submit" class="btn btn-primary"> Gönder </button>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button
-                        type="button"
-                        class="btn btn-secondary"
-                        data-bs-dismiss="modal"
-                    >
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Kapat
                     </button>
                     <button type="button" class="btn btn-primary">Kaydet</button>
@@ -181,6 +134,9 @@
     </div>
     <!-- Register End -->
 
+    <footer class="bg-dark text-white w-100">
+        Bütün Haklar Saklır. &copy; 2023
+    </footer>
 
     <!-- end codes -->
     <!-- Bootstrap JavaScript Libraries -->
