--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- Register End -->
 
     <footer class="bg-dark text-white w-100">
-        Bütün Haklar Saklır. &copy; 2023
+        Bütün Haklar Saklıdır. &copy; 2023
     </footer>
 
     <!-- end codes -->
